@@ -12,6 +12,9 @@ For a complete change history, please see the Subversion log comments.
 
 Current Version (5.1-dev, SVN trunk):
 -------------------------------------
+- fixed symbolsetObj not to set the SWIG immutable flag permanently
+  don't expose refcount and the symbol attributes (Ticket #2407)
+
 - fix for support of entity encoded text in angle follow text (#2403)
 
 - AGG: initial support for native computation of label sizes (#2357)
